--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,24 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width:100%;
+  height:100%;
+}
+
+#root::after{
+  content:' ';
+  box-sizing: content-box;
+  background-image:url('/background.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:-100px;
+  z-index: -1;
+  filter: grayscale(1) opacity(.15) ; 
 }
 
